@@ -1,9 +1,7 @@
 package uk.gov.pay.connector.gatewayaccountcredentials.resource;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.google.common.base.Joiner;
-import com.google.inject.Inject;
-import uk.gov.pay.connector.app.ConnectorConfiguration;
+import uk.gov.pay.connector.gateway.PaymentGatewayName;
 import uk.gov.pay.connector.gatewayaccount.model.GatewayAccountCredentialsRequest;
 import uk.gov.service.payments.commons.api.exception.ValidationException;
 import uk.gov.service.payments.commons.api.validation.JsonPatchRequestValidator;
@@ -17,10 +15,9 @@ import java.util.Map;
 import java.util.function.Consumer;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
-import static com.google.common.collect.Maps.newHashMap;
 import static java.lang.String.format;
+import static java.util.stream.Collectors.toUnmodifiableList;
 import static uk.gov.pay.connector.gateway.PaymentGatewayName.STRIPE;
 import static uk.gov.pay.connector.gateway.PaymentGatewayName.WORLDPAY;
 import static uk.gov.pay.connector.gatewayaccount.model.GatewayAccountCredentialsRequest.PAYMENT_PROVIDER_FIELD_NAME;
@@ -29,9 +26,13 @@ import static uk.gov.service.payments.commons.api.validation.JsonPatchRequestVal
 
 public class GatewayAccountCredentialsRequestValidator {
 
-    private final Map<String, List<String>> providerCredentialFields;
-    private final Joiner COMMA_JOINER = Joiner.on(", ");
     private static final Pattern WORLDPAY_MERCHANT_ID_PATTERN = Pattern.compile("[0-9a-f]{15}");
+
+    private static final List<String> LEGACY_WORLDPAY_CREDENTIALS_KEYS = List.of("merchant_id", "username", "password");
+    private static final List<String> WORLDPAY_CREDENTIALS_KEYS = List.of("merchant_code", "username", "password");
+    private static final List<String> STRIPE_CREDENTIALS_KEYS = List.of("stripe_account_id");
+    private static final List<String> EPDQ_CREDENTIALS_KEYS = List.of("merchant_id", "username", "password",
+            "sha_in_passphrase", "sha_out_passphrase");
 
     public static final String FIELD_CREDENTIALS = "credentials";
     public static final String FIELD_CREDENTIALS_WORLDPAY_ONE_OFF_CUSTOMER_INITIATED = "credentials/worldpay/one_off_customer_initiated";
@@ -42,67 +43,91 @@ public class GatewayAccountCredentialsRequestValidator {
     public static final String FIELD_GATEWAY_MERCHANT_ID = "gateway_merchant_id";
     public static final String GATEWAY_MERCHANT_ID_PATH = "credentials/gateway_merchant_id";
 
-    @Inject
-    public GatewayAccountCredentialsRequestValidator(ConnectorConfiguration configuration) {
-        // validator hooked into dependency injection as it needs access to top level connector configuration
-        providerCredentialFields = newHashMap();
-        providerCredentialFields.put("worldpay", configuration.getWorldpayConfig().getCredentials());
-        providerCredentialFields.put("epdq", configuration.getEpdqConfig().getCredentials());
-        providerCredentialFields.put("stripe", configuration.getStripeConfig().getCredentials());
-    }
-
-    private void validatePaymentProvider(String paymentProvider) {
-        if (paymentProvider == null) {
-            throw new ValidationException(Collections.singletonList(format("Field(s) missing: [%s]", PAYMENT_PROVIDER_FIELD_NAME)));
+    public void validateCreate(GatewayAccountCredentialsRequest gatewayAccountCredentialsRequest) {
+        if (gatewayAccountCredentialsRequest.getPaymentProvider() == null) {
+            throw new ValidationException(List.of("Field(s) missing: [" + PAYMENT_PROVIDER_FIELD_NAME + ']'));
         }
-        if (!(paymentProvider.equals(WORLDPAY.getName()) || paymentProvider.equals(STRIPE.getName()))) {
-            throw new ValidationException(Collections.singletonList(format("Operation not supported for payment provider '%s'", paymentProvider)));
-        }
-    }
 
-    private void validateCredentialsForPaymentProvider(Map<String, String> credentials, String paymentProvider) {
+        var paymentGatewayName = PaymentGatewayName.valueFrom(gatewayAccountCredentialsRequest.getPaymentProvider());
+
+        if (!(paymentGatewayName == WORLDPAY || paymentGatewayName == STRIPE)) {
+            throw new ValidationException(List.of("Operation not supported for payment provider '"
+                    + paymentGatewayName.getName() + "'"));
+        }
+
+        Map<String, String> credentials = gatewayAccountCredentialsRequest.getCredentialsAsMap();
         if (credentials != null) {
-            List<String> missingCredentialsFields = getMissingCredentialsFields(credentials, paymentProvider);
+            List<String> missingCredentialsFields = getMissingCredentialsFields(credentials, paymentGatewayName, FIELD_CREDENTIALS);
             if (!missingCredentialsFields.isEmpty()) {
-                throw new ValidationException(Collections.singletonList(format("Field(s) missing: [%s]", COMMA_JOINER.join(missingCredentialsFields))));
+                throw new ValidationException(List.of("Field(s) missing: [" + String.join(", ", missingCredentialsFields) + ']'));
             }
         }
     }
 
-    public void validateCreate(GatewayAccountCredentialsRequest gatewayAccountCredentialsRequest) {
-        validatePaymentProvider(gatewayAccountCredentialsRequest.getPaymentProvider());
-        validateCredentialsForPaymentProvider(gatewayAccountCredentialsRequest.getCredentialsAsMap(), gatewayAccountCredentialsRequest.getPaymentProvider());
-    }
-
-    public List<String> getMissingCredentialsFields(Map<String, String> credentials, String paymentProvider) {
-        if (!providerCredentialFields.containsKey(paymentProvider)) {
-            throw new UnsupportedOperationException(format("Cannot perform operation for payment provider [%s]", paymentProvider));
-        }
-        return providerCredentialFields.get(paymentProvider).stream()
-                .filter(requiredField -> !credentials.containsKey(requiredField))
-                .collect(Collectors.toList());
-    }
-
     public void validatePatch(JsonNode patchRequest, String paymentProvider, Map<String, Object> credentials) {
+        var paymentGatewayName = PaymentGatewayName.valueFrom(paymentProvider);
+
         Map<PatchPathOperation, Consumer<JsonPatchRequest>> operationValidators = Map.of(
-                new PatchPathOperation(FIELD_CREDENTIALS, JsonPatchOp.REPLACE), operation -> validateReplaceCredentialsOperation(operation, paymentProvider),
-                new PatchPathOperation(FIELD_CREDENTIALS_WORLDPAY_ONE_OFF_CUSTOMER_INITIATED, JsonPatchOp.REPLACE), operation -> validateReplaceCredentialsOperation(operation, paymentProvider),
-                new PatchPathOperation(FIELD_CREDENTIALS_WORLDPAY_RECURRING_CUSTOMER_INITIATED, JsonPatchOp.REPLACE), operation -> validateReplaceCredentialsOperation(operation, paymentProvider),
-                new PatchPathOperation(FIELD_CREDENTIALS_WORLDPAY_RECURRING_MERCHANT_INITIATED, JsonPatchOp.REPLACE), operation -> validateReplaceCredentialsOperation(operation, paymentProvider),
-                new PatchPathOperation(FIELD_LAST_UPDATED_BY_USER, JsonPatchOp.REPLACE), JsonPatchRequestValidator::throwIfValueNotString,
+                new PatchPathOperation(FIELD_CREDENTIALS, JsonPatchOp.REPLACE),
+                        operation -> validateReplaceCredentialsOperation(operation, paymentGatewayName,
+                                FIELD_CREDENTIALS),
+
+                new PatchPathOperation(FIELD_CREDENTIALS_WORLDPAY_ONE_OFF_CUSTOMER_INITIATED, JsonPatchOp.REPLACE),
+                        operation -> validateReplaceCredentialsOperation(operation, paymentGatewayName,
+                                FIELD_CREDENTIALS_WORLDPAY_ONE_OFF_CUSTOMER_INITIATED),
+
+                new PatchPathOperation(FIELD_CREDENTIALS_WORLDPAY_RECURRING_CUSTOMER_INITIATED, JsonPatchOp.REPLACE),
+                        operation -> validateReplaceCredentialsOperation(operation, paymentGatewayName,
+                                FIELD_CREDENTIALS_WORLDPAY_RECURRING_CUSTOMER_INITIATED),
+
+                new PatchPathOperation(FIELD_CREDENTIALS_WORLDPAY_RECURRING_MERCHANT_INITIATED, JsonPatchOp.REPLACE),
+                        operation -> validateReplaceCredentialsOperation(operation, paymentGatewayName,
+                                FIELD_CREDENTIALS_WORLDPAY_RECURRING_MERCHANT_INITIATED),
+
+                new PatchPathOperation(FIELD_LAST_UPDATED_BY_USER, JsonPatchOp.REPLACE),
+                        JsonPatchRequestValidator::throwIfValueNotString,
+
                 new PatchPathOperation(FIELD_STATE, JsonPatchOp.REPLACE), this::validateReplaceStateOperation,
-                new PatchPathOperation(GATEWAY_MERCHANT_ID_PATH, JsonPatchOp.REPLACE), request -> validateGatewayMerchantId(request, paymentProvider, credentials)
+
+                new PatchPathOperation(GATEWAY_MERCHANT_ID_PATH, JsonPatchOp.REPLACE),
+                        request -> validateGatewayMerchantId(request, paymentProvider, credentials)
         );
+
         var patchRequestValidator = new JsonPatchRequestValidator(operationValidators);
         patchRequestValidator.validate(patchRequest);
     }
 
-    private void validateReplaceCredentialsOperation(JsonPatchRequest request, String paymentProvider) {
+    private void validateReplaceCredentialsOperation(JsonPatchRequest request, PaymentGatewayName paymentProvider, String path) {
         Map<String, String> credentialsMap = request.valueAsObject();
-        List<String> missingCredentialsFields = getMissingCredentialsFields(credentialsMap, paymentProvider);
+        List<String> missingCredentialsFields = getMissingCredentialsFields(credentialsMap, paymentProvider, path);
         if (!missingCredentialsFields.isEmpty()) {
-            throw new ValidationException(Collections.singletonList(format("Value for path [%s] is missing field(s): [%s]",
-                    FIELD_CREDENTIALS, COMMA_JOINER.join(missingCredentialsFields))));
+            throw new ValidationException(List.of(format("Value for path [%s] is missing field(s): [%s]", path,
+                    String.join(", ", missingCredentialsFields))));
+        }
+    }
+
+    private List<String> getMissingCredentialsFields(Map<String, String> credentials, PaymentGatewayName paymentProvider, String path) {
+        return getRequiredCredentialsFields(paymentProvider, path)
+                .stream()
+                .filter(requiredField -> !credentials.containsKey(requiredField))
+                .collect(toUnmodifiableList());
+    }
+
+    private List<String> getRequiredCredentialsFields(PaymentGatewayName paymentProvider, String path) {
+        switch (paymentProvider) {
+            case WORLDPAY:
+                if (FIELD_CREDENTIALS.equals(path)) {
+                    return LEGACY_WORLDPAY_CREDENTIALS_KEYS;
+                }
+                return WORLDPAY_CREDENTIALS_KEYS;
+            case STRIPE:
+                return STRIPE_CREDENTIALS_KEYS;
+            case EPDQ:
+                return EPDQ_CREDENTIALS_KEYS;
+            case SMARTPAY:
+            case SANDBOX:
+            default:
+                throw new UnsupportedOperationException("Cannot perform operation for payment provider [ " + paymentProvider.getName() + ']');
         }
     }
 
@@ -117,7 +142,7 @@ public class GatewayAccountCredentialsRequestValidator {
     private void validateGatewayMerchantId(JsonPatchRequest request, String paymentProvider,
                                            Map<String, Object> credentials) {
         if (!WORLDPAY.getName().equals(paymentProvider)) {
-            throw new ValidationException(List.of(format("Gateway '%s' does not support digital wallets.", paymentProvider)));
+            throw new ValidationException(List.of("Gateway '" + paymentProvider + "' does not support digital wallets."));
         }
         if (credentials.isEmpty()) {
             throw new ValidationException(List.of("Account credentials are required to set a Gateway Merchant ID."));
@@ -130,7 +155,9 @@ public class GatewayAccountCredentialsRequestValidator {
     private void throwIfNotValidMerchantId(String value, String field) {
         Matcher matcher = WORLDPAY_MERCHANT_ID_PATTERN.matcher(value);
         if (!matcher.matches()) {
-            throw new ValidationException(Collections.singletonList(format("Field [%s] value [%s] does not match that expected for a Worldpay Merchant ID; should be 15 characters and within range [0-9a-f]", field, value)));
+            throw new ValidationException(List.of(format("Field [%s] value [%s] does not match that expected for a "
+                    + "Worldpay Merchant ID; should be 15 characters and within range [0-9a-f]", field, value)));
         }
     }
+
 }
